include icb, ltla, utla shape directories

--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -114,6 +114,90 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### icb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "icb_shape_directory = shape_name_contains('integrated_care_boards', 'buc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2244</th>\n",
+       "      <td>Integrated_Care_Boards_(July_2022)_EN_BUC</td>\n",
+       "      <td>MapServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Integrated_Care_Boards_(July_2022)_EN_BUC/MapServer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           name       type  \\\n",
+       "2244  Integrated_Care_Boards_(July_2022)_EN_BUC  MapServer   \n",
+       "\n",
+       "                                                                                                                         url  \n",
+       "2244  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Integrated_Care_Boards_(July_2022)_EN_BUC/MapServer  "
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "icb_shape_directory"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ccg"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
@@ -303,6 +387,180 @@
    "source": [
     "ccg_shape_directory"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ltla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ltla_shape_directory = pd.concat([shape_name_contains('local_authority_districts', 'buc') # 2016 to 2022\n",
+    "])\n",
+    "\n",
+    "# shape_name_contains('local_authority_districts', 'generalised') # 2018\n",
+    "# shape_name_contains('local_authority_districts', 'ugcb') # 2019, 2020"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### utla"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\medssam\\AppData\\Local\\Temp\\ipykernel_1400\\3842358801.py:4: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
+      "  return shape_directory[(shape_directory['name'].str.lower().str.contains(str1)) & (shape_directory['name'].str.lower().str.contains(str2))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "utla_shape_directory = pd.concat([shape_name_contains('counties_and_unitary_authorities', 'ew_buc'), # 2017, 2019\n",
+    "                                  shape_name_contains('counties_and_unitary_authorities_(december_2018)', 'gcb_ew'), # 2018\n",
+    "                                  shape_name_contains('counties_and_unitary_authorities', '2020_uk_bgc'), # 2020\n",
+    "                                  shape_name_contains('counties_and_unitary_authorities', 'en_buc'), # 2021\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>Counties_and_Unitary_Authorities_April_2019_Boundaries_EW_BUC_2022</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_April_2019_Boundaries_EW_BUC_2022/FeatureServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>205</th>\n",
+       "      <td>Counties_and_Unitary_Authorities_December_2017_EW_BUC_2022</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_December_2017_EW_BUC_2022/FeatureServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2038</th>\n",
+       "      <td>Counties_and_Unitary_Authorities_(April_2019)_Boundaries_EW_BUC</td>\n",
+       "      <td>MapServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_(April_2019)_Boundaries_EW_BUC/MapServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2056</th>\n",
+       "      <td>Counties_and_Unitary_Authorities_(December_2017)_EW_BUC</td>\n",
+       "      <td>MapServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_(December_2017)_EW_BUC/MapServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>211</th>\n",
+       "      <td>Counties_and_Unitary_Authorities_December_2018_GCB_EW_2022</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_December_2018_GCB_EW_2022/FeatureServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>218</th>\n",
+       "      <td>Counties_and_Unitary_Authorities_December_2020_UK_BGC_2022</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_December_2020_UK_BGC_2022/FeatureServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>220</th>\n",
+       "      <td>Counties_and_Unitary_Authorities_December_2021_EN_BUC</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_December_2021_EN_BUC/FeatureServer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                    name  \\\n",
+       "188   Counties_and_Unitary_Authorities_April_2019_Boundaries_EW_BUC_2022   \n",
+       "205           Counties_and_Unitary_Authorities_December_2017_EW_BUC_2022   \n",
+       "2038     Counties_and_Unitary_Authorities_(April_2019)_Boundaries_EW_BUC   \n",
+       "2056             Counties_and_Unitary_Authorities_(December_2017)_EW_BUC   \n",
+       "211           Counties_and_Unitary_Authorities_December_2018_GCB_EW_2022   \n",
+       "218           Counties_and_Unitary_Authorities_December_2020_UK_BGC_2022   \n",
+       "220                Counties_and_Unitary_Authorities_December_2021_EN_BUC   \n",
+       "\n",
+       "               type  \\\n",
+       "188   FeatureServer   \n",
+       "205   FeatureServer   \n",
+       "2038      MapServer   \n",
+       "2056      MapServer   \n",
+       "211   FeatureServer   \n",
+       "218   FeatureServer   \n",
+       "220   FeatureServer   \n",
+       "\n",
+       "                                                                                                                                                      url  \n",
+       "188   https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_April_2019_Boundaries_EW_BUC_2022/FeatureServer  \n",
+       "205           https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_December_2017_EW_BUC_2022/FeatureServer  \n",
+       "2038         https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_(April_2019)_Boundaries_EW_BUC/MapServer  \n",
+       "2056                 https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_(December_2017)_EW_BUC/MapServer  \n",
+       "211           https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_December_2018_GCB_EW_2022/FeatureServer  \n",
+       "218           https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_December_2020_UK_BGC_2022/FeatureServer  \n",
+       "220                https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_December_2021_EN_BUC/FeatureServer  "
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "utla_shape_directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
