retrieve region data and save

--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -60,11 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://services1.arcgis.com/ESMARspQHYMw9BZ9/arcgis/rest/services/Clinical_Commissioning_Groups_April_2019_Boundaries_EN_BUC_2022/FeatureServer/0/query?outFields=*&where=1%3D1&f=geojson'"
+    "url = 'https://services1.arcgis.com/ESMARspQHYMw9BZ9/arcgis/rest/services/Clinical_Commissioning_Groups_April_2019_Boundaries_EN_BUC_2022/FeatureServer/0/query?outFields=*&where=1%3D1&f=geojson'\n",
+    "\n",
+    "region_url = 'https://services1.arcgis.com/ESMARspQHYMw9BZ9/arcgis/rest/services/Regions_December_2022_EN_BUC/FeatureServer/0/query?outFields=*&where=1%3D1&f=geojson'"
    ]
   },
   {
@@ -73,11 +75,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with urllib.request.urlopen(url) as contents:\n",
-    "    json_data = json.loads(contents.read())\n",
-    "shape_data = pd.json_normalize(json_data['features'])\n",
+    "# with urllib.request.urlopen(url) as contents:\n",
+    "#     json_data = json.loads(contents.read())\n",
+    "# shape_data = pd.json_normalize(json_data['features'])\n",
     "\n",
-    "shape_data.to_csv('test_shape_data.csv')"
+    "# shape_data.to_csv('test_shape_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with urllib.request.urlopen(region_url) as contents:\n",
+    "#     json_data = json.loads(contents.read())\n",
+    "# region_shape_data = pd.json_normalize(json_data['features'])\n",
+    "\n",
+    "# region_shape_data.to_csv('test_region_shape_data.csv')"
    ]
   },
   {
@@ -553,6 +568,14 @@
    ],
    "source": [
     "utla_shape_directory"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### region"
    ]
   },
   {
