include region shape directory

--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -580,6 +580,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\medssam\\AppData\\Local\\Temp\\ipykernel_1400\\3842358801.py:4: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
+      "  return shape_directory[(shape_directory['name'].str.lower().str.contains(str1)) & (shape_directory['name'].str.lower().str.contains(str2))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "region_shape_directory = pd.concat([shape_name_contains('Regions_(December_2022)_EN_BUC', '')\n",
+    "])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
