--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -209,6 +209,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### sub_icb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sub_icb_shape_directory = pd.concat([shape_name_contains('sub_integrated_care_board', 'bgc'),\n",
+    "                                     shape_name_contains('sub_integrated_care_board', 'buc')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2876</th>\n",
+       "      <td>Sub_Integrated_Care_Board_Locations_(July_2022)_EN_BGC</td>\n",
+       "      <td>MapServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_(July_2022)_EN_BGC/MapServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3036</th>\n",
+       "      <td>Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC/FeatureServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3042</th>\n",
+       "      <td>Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC</td>\n",
+       "      <td>WFSServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC/WFSServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3043</th>\n",
+       "      <td>Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC</td>\n",
+       "      <td>MapServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC/MapServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3074</th>\n",
+       "      <td>Sub_Integrated_Care_Board_Locations_July_2022_EN_BUC</td>\n",
+       "      <td>WFSServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_July_2022_EN_BUC/WFSServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3075</th>\n",
+       "      <td>Sub_Integrated_Care_Board_Locations_July_2022_EN_BUC</td>\n",
+       "      <td>MapServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_July_2022_EN_BUC/MapServer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                        name           type  \\\n",
+       "2876  Sub_Integrated_Care_Board_Locations_(July_2022)_EN_BGC      MapServer   \n",
+       "3036   Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC  FeatureServer   \n",
+       "3042   Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC      WFSServer   \n",
+       "3043   Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC      MapServer   \n",
+       "3074    Sub_Integrated_Care_Board_Locations_July_2022_EN_BUC      WFSServer   \n",
+       "3075    Sub_Integrated_Care_Board_Locations_July_2022_EN_BUC      MapServer   \n",
+       "\n",
+       "                                                                                                                                         url  \n",
+       "2876     https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_(July_2022)_EN_BGC/MapServer  \n",
+       "3036  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC/FeatureServer  \n",
+       "3042      https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC/WFSServer  \n",
+       "3043      https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_April_2023_EN_BGC/MapServer  \n",
+       "3074       https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_July_2022_EN_BUC/WFSServer  \n",
+       "3075       https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_July_2022_EN_BUC/MapServer  "
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sub_icb_shape_directory"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### ccg"
    ]
   },
@@ -602,7 +720,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### "
+    "### STPs (pre Apr 2020)"
    ]
   },
   {
@@ -610,7 +728,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### STPs (from Apr 2020)"
+   ]
   }
  ],
  "metadata": {
