include stp shape directory

--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -720,7 +720,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### STPs (pre Apr 2020)"
+    "### STPs (pre Apr 2020) and STPs (from Apr 2020)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stp_shape_directory = pd.concat([shape_name_contains('sustainability_and_transformation', 'buc') # 2018, 2021\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>type</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1645</th>\n",
+       "      <td>Sustainability_and_Transformation_Partnerships_April_2018_EN_BUC_2022</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sustainability_and_Transformation_Partnerships_April_2018_EN_BUC_2022/FeatureServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1651</th>\n",
+       "      <td>Sustainability_and_Transformation_Partnerships_April_2021_EN_BUC_V2_2022</td>\n",
+       "      <td>FeatureServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sustainability_and_Transformation_Partnerships_April_2021_EN_BUC_V2_2022/FeatureServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2881</th>\n",
+       "      <td>Sustainability_and_Transformation_Partnerships_(April_2018)_EN_BUC</td>\n",
+       "      <td>MapServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sustainability_and_Transformation_Partnerships_(April_2018)_EN_BUC/MapServer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2885</th>\n",
+       "      <td>Sustainability_and_Transformation_Partnerships_(April_2021)_EN_BUC_(V2)</td>\n",
+       "      <td>MapServer</td>\n",
+       "      <td>https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sustainability_and_Transformation_Partnerships_(April_2021)_EN_BUC_(V2)/MapServer</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                          name  \\\n",
+       "1645     Sustainability_and_Transformation_Partnerships_April_2018_EN_BUC_2022   \n",
+       "1651  Sustainability_and_Transformation_Partnerships_April_2021_EN_BUC_V2_2022   \n",
+       "2881        Sustainability_and_Transformation_Partnerships_(April_2018)_EN_BUC   \n",
+       "2885   Sustainability_and_Transformation_Partnerships_(April_2021)_EN_BUC_(V2)   \n",
+       "\n",
+       "               type  \\\n",
+       "1645  FeatureServer   \n",
+       "1651  FeatureServer   \n",
+       "2881      MapServer   \n",
+       "2885      MapServer   \n",
+       "\n",
+       "                                                                                                                                                            url  \n",
+       "1645     https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sustainability_and_Transformation_Partnerships_April_2018_EN_BUC_2022/FeatureServer  \n",
+       "1651  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sustainability_and_Transformation_Partnerships_April_2021_EN_BUC_V2_2022/FeatureServer  \n",
+       "2881            https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sustainability_and_Transformation_Partnerships_(April_2018)_EN_BUC/MapServer  \n",
+       "2885       https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sustainability_and_Transformation_Partnerships_(April_2021)_EN_BUC_(V2)/MapServer  "
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stp_shape_directory"
    ]
   },
   {
@@ -728,9 +827,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "### STPs (from Apr 2020)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
