--- a/ons_open_geography.ipynb
+++ b/ons_open_geography.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_geojson_url(dataset_name:str):\n",
+    "    url = 'https://services1.arcgis.com/ESMARspQHYMw9BZ9/arcgis/rest/services/' + dataset_name + '/FeatureServer/0/query?outFields=*&where=1%3D1&f=geojson'\n",
+    "    return url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retrieve_geojson_from_url(url:str):\n",
+    "    with urllib.request.urlopen(url) as contents:\n",
+    "        geojson_data = json.loads(contents.read())\n",
+    "    \n",
+    "    shape_data = pd.json_normalize(geojson_data['features'])\n",
+    "    return shape_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_geojson_from_url(url:str, filename:str):\n",
+    "    shape_data = retrieve_geojson_from_url(url)\n",
+    "    shape_data.to_csv(filename)\n",
+    "    print(filename + ' successfully saved')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_geojson_from_dataset_name(dataset_name:str):\n",
+    "    url = create_geojson_url(dataset_name)\n",
+    "    save_geojson_from_url(url, dataset_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +243,7 @@
        "2244  https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Integrated_Care_Boards_(July_2022)_EN_BUC/MapServer  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +361,7 @@
        "3075       https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sub_Integrated_Care_Board_Locations_July_2022_EN_BUC/MapServer  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +560,7 @@
        "1917                                                    https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/CCG_(July_2015)_UGCB_in_England/MapServer  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -552,14 +600,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\medssam\\AppData\\Local\\Temp\\ipykernel_1400\\3842358801.py:4: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
+      "C:\\Users\\medssam\\AppData\\Local\\Temp\\ipykernel_7768\\3842358801.py:4: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
       "  return shape_directory[(shape_directory['name'].str.lower().str.contains(str1)) & (shape_directory['name'].str.lower().str.contains(str2))]\n"
      ]
     }
@@ -574,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +727,7 @@
        "220                https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Counties_and_Unitary_Authorities_December_2021_EN_BUC/FeatureServer  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,14 +746,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\medssam\\AppData\\Local\\Temp\\ipykernel_1400\\3842358801.py:4: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
+      "C:\\Users\\medssam\\AppData\\Local\\Temp\\ipykernel_7768\\3842358801.py:4: UserWarning: This pattern is interpreted as a regular expression, and has match groups. To actually get the groups, use str.extract.\n",
       "  return shape_directory[(shape_directory['name'].str.lower().str.contains(str1)) & (shape_directory['name'].str.lower().str.contains(str2))]\n"
      ]
     }
@@ -725,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +861,7 @@
        "2885       https://services1.arcgis.com/ESMARspQHYMw9BZ9/ArcGIS/rest/services/Sustainability_and_Transformation_Partnerships_(April_2021)_EN_BUC_(V2)/MapServer  "
       ]
      },
-     "execution_count": 90,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
