get data in batches function

--- a/phe_fingertips.ipynb
+++ b/phe_fingertips.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import fingertips_py as ftp\n",
     "from json import loads\n",
     "import pandas as pd\n",
-    "from urllib.request import urlopen"
+    "from urllib.request import urlopen\n",
+    "from math import ceil"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +238,7 @@
        "0  Directly standardised rate  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +354,7 @@
        "array([1.])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +450,7 @@
        "array([], dtype=int64)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,20 +485,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for area_id in get_ind_area_combos['AreaTypeId'].unique():\n",
-    "#     get_data(get_ind_area_combos, area_id)"
+    "def get_data_batches(data, area_type_id, batch_size, folder_name):\n",
+    "    replace_comma = '%2C'\n",
+    "    \n",
+    "    indicator_list = return_ind_list_for_area_type(data, area_type_id)\n",
+    "    batch_size = 100\n",
+    "    number_of_batches = ceil(len(indicator_list)/batch_size)\n",
+    "    \n",
+    "        # max 100 indicators can be retrieved at once so need to do this in batches\n",
+    "    for i in range(number_of_batches):\n",
+    "        start_index = i*batch_size\n",
+    "        end_index = (i+1)*batch_size\n",
+    "        batch_indicator_list = indicator_list[start_index: end_index]\n",
+    "        \n",
+    "        ids_as_str = replace_comma.join([str(i) for i in batch_indicator_list])\n",
+    "        \n",
+    "        values = ftp.retrieve_data.get_data_by_indicator_ids(indicator_ids=ids_as_str, # [Maximum 100]\n",
+    "                                                        area_type_id=area_type_id,\n",
+    "                                                        # parent_area_type_id=15,\n",
+    "                                                        # profile_id=None,\n",
+    "                                                        include_sortable_time_periods=True,\n",
+    "                                                        is_test=False)\n",
+    "        \n",
+    "        filename = (folder_name + '/' +\n",
+    "                    str(area_type_id) + '_' +\n",
+    "                    str(start_index) + 'to' +\n",
+    "                    str(end_index-1) + '.csv'\n",
+    "        )\n",
+    "        \n",
+    "        values.to_csv(filename, index=False)\n",
+    "        \n",
+    "        print(filename + ' successfully saved')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# for area_id in get_ind_area_combos['AreaTypeId'].unique():\n",
+    "#     get_data(raw_available_indicator_at_area, area_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "region/6_0to99.csv successfully saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\medssam\\Documents\\GitHub\\Health_Indicators\\.venv\\Lib\\site-packages\\fingertips_py\\retrieve_data.py:47: DtypeWarning: Columns (25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(base_url + populated_url)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "region/6_100to199.csv successfully saved\n",
+      "region/6_200to299.csv successfully saved\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\medssam\\Documents\\GitHub\\Health_Indicators\\.venv\\Lib\\site-packages\\fingertips_py\\retrieve_data.py:47: DtypeWarning: Columns (25) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(base_url + populated_url)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "region/6_300to399.csv successfully saved\n",
+      "region/6_400to499.csv successfully saved\n",
+      "region/6_500to599.csv successfully saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_data_batches(raw_available_indicator_at_area, 6, 100, 'region')"
+   ]
   },
   {
    "attachments": {},
@@ -513,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
